--- a/nginx/conf/conf.d/aria2.conf
+++ b/nginx/conf/conf.d/aria2.conf
@@ -5,7 +5,7 @@ server {
     ssl_certificate_key   /data/v2ray.key;
     ssl_protocols         TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers           TLS13-AES-256-GCM-SHA384:TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-    server_name aria2.xn--4gqp3krlw6xiiha30z1ui.tk;
+    server_name aria2.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
     index index.html index.htm;
     root  /home/wwwroot/3DCEList;
     error_page 400 = /400.html;
@@ -46,6 +46,6 @@ server {
 server {
     listen 80;
     listen [::]:80;
-    server_name aria2.xn--4gqp3krlw6xiiha30z1ui.tk;
-    return 301 https://aria2.xn--4gqp3krlw6xiiha30z1ui.tk$request_uri;
+    server_name aria2.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
+    return 301 https://aria2.xn--4gqp3kj4hgvhbnaj0m7o1g.cn$request_uri;
 }
