--- a/nginx/conf/conf.d/aria2-vps.conf
+++ b/nginx/conf/conf.d/aria2-vps.conf
@@ -20,7 +20,7 @@ server {
 
     location /
     {
-        proxy_pass http://paulhybryant.myqnapcloud.com:8005;
+        proxy_pass http://localhost:6880;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,14 +32,15 @@ server {
 
     location /jsonrpc
     {
-        proxy_pass http://paulhybryant.myqnapcloud.com:6800/jsonrpc;
-        proxy_http_version 1.1;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://localhost:6800/jsonrpc;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP       $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        #以下代码使支持WebSocket
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Scheme $scheme;
     }
 }
 server {
