--- a/nginx/conf/conf.d/rsshub.conf
+++ b/nginx/conf/conf.d/rsshub.conf
@@ -18,7 +18,7 @@ server {
 
     location /
     {
-        proxy_pass https://localhost:1200;
+        proxy_pass http://localhost:1200;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
