--- a/nginx/conf/conf.d/aria2.conf
+++ b/nginx/conf/conf.d/aria2.conf
@@ -23,6 +23,7 @@ server {
         proxy_pass http://paulhybryant.myqnapcloud.com:8005;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -35,6 +36,7 @@ server {
         proxy_pass http://paulhybryant.myqnapcloud.com:6800/jsonrpc;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
