--- a/nginx/conf/conf.d/calibre.conf
+++ b/nginx/conf/conf.d/calibre.conf
@@ -20,15 +20,22 @@ server {
 
     location /
     {
+        proxy_redirect off;
         proxy_pass http://paulhybryant.myqnapcloud.com:8003;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Ssl on;
+        proxy_set_header X-Frame-Options SAMEORIGIN;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $http_host;
         proxy_set_header X-Scheme $scheme;
+        # Config for 0-RTT in TLSv1.3
+        proxy_set_header Early-Data $ssl_early_data;
     }
+
 }
 server {
     listen 80;
