--- a/nginx/conf/conf.d/conf.template
+++ b/nginx/conf/conf.d/conf.template
@@ -5,7 +5,7 @@ server {
     ssl_certificate_key   /data/v2ray.key;
     ssl_protocols         TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers           TLS13-AES-256-GCM-SHA384:TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-    server_name kod.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
+    server_name {{app}}.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
     index index.html index.htm;
     root  /home/wwwroot/3DCEList;
     error_page 400 = /400.html;
@@ -16,12 +16,15 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security "max-age=31536000";
 
-    client_max_body_size 64M;
+    {% for additional_config in additional_configs %}
+    {{ additional_config }};
+    {% endfor %}
 
-    location /
+    {% for location in locations %}
+    location {{ location.location }}
     {
         proxy_redirect off;
-        proxy_pass http://paulhybryant.myqnapcloud.com:8006;
+        proxy_pass {{location.host}};
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -36,10 +39,12 @@ server {
         proxy_set_header Early-Data $ssl_early_data;
     }
 
+    {% endfor %}
 }
 server {
     listen 80;
     listen [::]:80;
-    server_name kod.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
-    return 301 https://kod.xn--4gqp3kj4hgvhbnaj0m7o1g.cn$request_uri;
+    server_name {{app}}.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
+    return 301 https://{{app}}.xn--4gqp3kj4hgvhbnaj0m7o1g.cn$request_uri;
 }
+
