--- a/nginx/conf/conf.d/nextcloud.conf
+++ b/nginx/conf/conf.d/nextcloud.conf
@@ -16,17 +16,25 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security "max-age=31536000";
 
+
     location /
     {
+        proxy_redirect off;
         proxy_pass https://localhost:8443;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Ssl on;
+        proxy_set_header X-Frame-Options SAMEORIGIN;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $http_host;
         proxy_set_header X-Scheme $scheme;
+        # Config for 0-RTT in TLSv1.3
+        proxy_set_header Early-Data $ssl_early_data;
     }
+
 }
 server {
     listen 80;
