--- a/nginx/conf/conf.d/ttrss.conf
+++ b/nginx/conf/conf.d/ttrss.conf
@@ -16,29 +16,31 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security "max-age=31536000";
 
+    client_max_body_size 64M;
+    client_body_buffer_size 128k;
+    proxy_buffer_size 4k;
+    proxy_buffers 4 32k;
+    proxy_busy_buffers_size 64k;
+    proxy_temp_file_write_size  64k;
+
     location /
     {
         proxy_redirect off;
         proxy_pass http://localhost:1280;
         proxy_http_version 1.1;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Ssl on;
+        proxy_set_header X-Frame-Options SAMEORIGIN;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $http_host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto   $scheme;
-        proxy_set_header X-Forwarded-Ssl     on;
-        proxy_set_header X-Frame-Options     SAMEORIGIN;
-        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Scheme $scheme;
-
-        client_max_body_size        100m;
-        client_body_buffer_size     128k;
-
-        proxy_buffer_size           4k;
-        proxy_buffers               4 32k;
-        proxy_busy_buffers_size     64k;
-        proxy_temp_file_write_size  64k;
+        # Config for 0-RTT in TLSv1.3
+        proxy_set_header Early-Data $ssl_early_data;
     }
+
 }
 server {
     listen 80;
