--- a/nginx/conf/conf.d/aria2.conf
+++ b/nginx/conf/conf.d/aria2.conf
@@ -20,7 +20,7 @@ server {
     location /
     {
         proxy_redirect off;
-        proxy_pass http://paulhybryant.myqnapcloud.com:8005;
+        proxy_pass http://localhost:6880;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -38,7 +38,7 @@ server {
     location /jsonrpc
     {
         proxy_redirect off;
-        proxy_pass http://paulhybryant.myqnapcloud.com:6800/jsonrpc;
+        proxy_pass http://localhost:6800/jsonrpc;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
