--- a/nginx/conf/conf.d/kod.conf
+++ b/nginx/conf/conf.d/kod.conf
@@ -21,7 +21,7 @@ server {
     location /
     {
         proxy_redirect off;
-        proxy_pass http://paulhybryant.myqnapcloud.com:8006;
+        proxy_pass http://localhost:8006;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
