--- a/nginx/conf/conf.d/nextcloud.conf
+++ b/nginx/conf/conf.d/nextcloud.conf
@@ -16,6 +16,7 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security "max-age=31536000";
 
+    client_max_body_size 64M;
 
     location /
     {
