--- a/nginx/conf/conf.d/baidupcs.conf
+++ b/nginx/conf/conf.d/baidupcs.conf
@@ -7,7 +7,7 @@ server {
     ssl_ciphers           TLS13-AES-256-GCM-SHA384:TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
     server_name baidupcs.xn--4gqp3kj4hgvhbnaj0m7o1g.cn;
     index index.html index.htm;
-    root  /home/wwwroot/3DCEList;
+    root /home/paulhybryant/gitrepo/vps/v2ray;
     error_page 400 = /400.html;
 
     # Config for 0-RTT in TLSv1.3
@@ -16,6 +16,10 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security "max-age=31536000";
 
+    location /files/
+    {
+        autoindex on;
+    }
 
     location /
     {
